# rowenshop

./: CMakeLists.txt  README.md  build.bat  index.html  order-success.html  package.json  robots.txt  sitemap.xml  vercel.json
WORKFLOW-FILE/: README.txt  build-windows.yml
api/: approve-beat.js  beat-upload.js  beats.js  create-checkout-session.js  order-status.js  recover-order.js  reject-beat.js  stripe-webhook.js  submit-beat.js
api/_lib/: beatApproval.js  beatResultPage.js  blobStore.js  catalog.js  email.js  http.js  license.js
assets/css/: styles.css
assets/js/: cart.js  config.js  main.js
docs/: BUFFER.md  BUILD_WINDOWS.md  DEPENDENCIES.md  PARAMETERS.md  TESTING.md
installer/: installer.iss
src/core/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: AtmosphereFx.h  CoreSettings.h  DspUtil.h  FragmentCore.cpp  FragmentCore.h  FragmentVoice.h  GrainScheduler.h  MotionLfo.h  RollingBuffer.h  TempoSync.h  VoicePool.h
src/params/: ParameterIDs.h  ParameterLayout.cpp  ParameterLayout.h
src/presets/: FactoryPresets.cpp  FactoryPresets.h  PresetManager.cpp  PresetManager.h  UndoableStateChange.h
src/ui/components/: BufferDisplay.h  FragmentFooter.h  FragmentTopBar.cpp  FragmentTopBar.h  HelpPanel.h  LevelMeter.h  RowenIconButton.h  RowenKnob.h  RowenModal.h  RowenToggleDot.h
src/ui/theme/: RowenAssets.h  RowenLookAndFeel.cpp  RowenLookAndFeel.h  RowenTheme.h  RowenTypography.cpp  RowenTypography.h
src/viz/: VizSnapshot.h
tests/: CoreTests.cpp
